infra/k8s-dev/client-depl-dev.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-depl-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
        - name: client
          image: ggabella91/client-dev
          resources:
            requests:
              memory: '450M'
---
apiVersion: v1
kind: Service
metadata:
  name: client-srv-dev
spec:
  selector:
    app: client
  ports:
    - name: client-dev
      protocol: TCP
      port: 3000
      targetPort: 3000
