infra/k8s-dev/email-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: email-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: email
  template:
    metadata:
      labels:
        app: email
    spec:
      containers:
        - name: email
          image: ggabella91/email
---
apiVersion: v1
kind: Service
metadata:
  name: email-srv
spec:
  selector:
    app: email
  ports:
    - name: email
      protocol: TCP
      port: 3000
      targetPort: 3000
