infra/k8s-dev/ingress-srv.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
    nginx.ingress.kubernetes.io/proxy-body-size: '8m'
    nginx.ingress.kubernetes.io/client-max-body-size: '8m'
    nginx.ingress.kubernetes.io/proxy-buffer-size: '8k'
    nginx.ingress.kubernetes.io/proxy-max-temp-file-size: '256m'
    # nginx.ingress.kubernetes.io/proxy-read-timeout: '50'
    # nginx.ingress.kubernetes.io/proxy-connect-timeout: '50'
spec:
  rules:
    - host: photo-share.dev
      http:
        paths:
          - path: /api/followers/?(.*)
            backend:
              serviceName: followers-srv
              servicePort: 3000
          - path: /api/posts/?(.*)
            backend:
              serviceName: posts-srv
              servicePort: 3000
          - path: /api/reactions/?(.*)
            backend:
              serviceName: posts-srv
              servicePort: 3000
          - path: /api/users/?(.*)
            backend:
              serviceName: auth-srv
              servicePort: 3000
          - path: /?(.*)
            backend:
              serviceName: client-srv
              servicePort: 3000
